# digital-eval

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.rust  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
digital_eval/: __init__.py  cli.py  evaluation.py  metrics.py  model.py  model_legacy.py
src/: evaluation.rs  geometry.rs  main.rs  metrics.rs  ocr_util.py  preprocessing.rs  resolve.rs
src/digital_eval/: __init__.py  aggregation.py  cli.py  evaluation.py  geometry.py  metrics.py  model.py  preprocessing.py  resolve.py  util.py
src/digital_eval/dictionary_metrics/: common.py
src/digital_eval/dictionary_metrics/language_tool/: LanguageTool.py  Util.py  common.py
src/digital_eval/model/: __init__.py  common.py  digital_object_model.py  digital_object_util.py  filter.py  format_alto_v3_util.py  format_page_util.py  main.py  minidom_util.py
src/model/: alto_parser.rs  digital_object.rs  mod.rs  page_parser.rs
src/ocr_util/: FrameFilterAltoV3.py  Util.py  __init__.py  cli.py  datatypes.py  frame.py  frame.rs  main.rs  ocr_util.py
src/ocr_util/corpora/: Gt2Mets.py  GtResources.py  MetsFileObtainer.py  MetsGenerator.py  common.py  template.corpus.xml
src/ocr_util/corpus/: Gt2Mets.py  GtResources.py  MetsFileObtainer.py  MetsGenerator.py  __init__.py  common.py  template.corpus.xml
src/ocr_util/eval/: __init__.py  aggregation.py  cli.py  evaluation.py  geometry.py  metrics.py  preprocessing.py
src/ocr_util/eval/dictionary_metrics/language_tool/: LanguageTool.py  Util.py
src/ocr_util/eval/model/: common.py  digital_object_model.py  digital_object_util.py  filter.py  format_alto_v3_util.py  format_page_util.py  main.py  minidom_util.py
src/ocr_util/show/: cli.py  ocr_render_data.py  ocr_show_segmentation.py
src/ocr_util/slice/: __init__.py  cli.py  cli_retro_pairs.py  gts_pairs.py  pairs_lstmfs.py
tests/: conftest.py  test_aggregation.py  test_corpus.py  test_dict_metric.py  test_digital_eval_cli.py  test_digital_object_ocr.py  test_digital_object_ocr_alto.py  test_digital_object_ocr_filter.py  test_digital_object_ocr_page.py  test_digital_object_ocr_page_eynollah.py  test_digital_object_txt.py  test_generate_sets.py  test_ocr_evaluate.py  test_ocr_frame.py  test_ocr_metrics.py  test_ocr_metrics_base.py  test_ocr_model.py  test_ocr_model_legacy.py  test_ocr_preprocessing.py  test_ocr_util_groundtruth_corpus.py  test_ocr_util_mets_generator.py  test_page_reading_order.py  test_requirements.txt  test_show_segmentation.py
tests/resources/: test_mets.xml
tests/resources/candidate/ara_alto/: 217745.xml
tests/resources/candidate/frk_alto/: 1667522809_J_0001_0002.xml  1667522809_J_0001_0256_corrupt.xml  1667522809_J_0073_0001_part.xml
tests/resources/candidate/frk_page/: 1667522809_J_0001_0512.xml  urn+nbn+de+gbv+3+1-115907-p0042-0_ger.xml  urn+nbn+de+gbv+3+1-126343-p0285-7_ger.xml  urn+nbn+de+gbv+3+1-138193-p0904-0_ger.xml
tests/resources/candidate/page/: 1744746265_19330115.xml
tests/resources/candidate/page_lines/: page01.xml
tests/resources/candidate/txt/: OCR-Fraktur_1246734.txt
tests/resources/dict_metric/: alto.xml  page2013.xml  page2019.xml
tests/resources/filter/alto/: 1667522809_J_0001_0768.2022.xml
tests/resources/frames/alto/: 1667522809_J_0001_0768.xml  1667522809_J_0073_0512_2020-02-11.xml  1667524704_J_0125_0512.xml  1667524704_J_0125_1208.gt.xml  1681877805_J_0001_0260.xml
tests/resources/groundtruth/alto/: 1667522809_J_0073_0001_375x2050_2325x9550.xml  1667522809_J_0073_0512_300x375_6200x3425.xml  urn+nbn+de+gbv+3+5-2064-fp00000404.xml
tests/resources/groundtruth/page/: 1667522809_J_0001_0002.art.gt.xml  1667522809_J_0001_0768.art.gt.xml  1667522809_J_0001_0938.ann.gt.xml  1667522809_J_0073_0512.gt.xml  1681877805_J_0075_0001.art.gt.xml  1751466019_18481220.xml  no_reading_order_element.xml  page01.gt.xml  rahbar-1185565752-00000086.xml  rahbar-1771946695-00000040.xml  reading_order_respected.xml  reading_order_with_missing_regions.xml  urn+nbn+de+gbv+3+1-112032-p0026-5_ger.gt.xml  urn+nbn+de+gbv+3+1-115907-p0042-0_ger.gt.xml  urn+nbn+de+gbv+3+1-126343-p0285-7_ger.gt.xml  urn+nbn+de+gbv+3+1-138193-p0904-0_ger.gt.xml  urn+nbn+de+gbv+3+1-201080-p0034-8_ger.gt.xml  urn+nbn+de+gbv+3+1-792101-p0667-5_ger.gt.xml  urn+nbn+de+gbv+3+1-792620-p1008-8_ger.gt.xml  urn+nbn+de+gbv+3+5-14325-fp-00000441.xml
tests/resources/groundtruth/txt/: 1246734.gt.txt  217745.gt.txt
tests/resources/ocr_frame/alto/: 1667524704_J_0125_0512.gt.xml
tests/resources/xml/: 0001.xml
