[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "digital_eval.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ocr_util = ["corpora/*.xml"]

[project]
name = "digital-eval"
dynamic = ["version"]
description = "Evaluate Digitalization Data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Universitäts- und Landesbibliothek Sachsen-Anhalt",email = "development@bibliothek.uni-halle.de"}]
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License"
]
dependencies = [
	"rapidfuzz>3",
    "nltk",
    "requests",
    "docker",
    "numpy",
    "shapely",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
]
test = [
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/ulb-sachsen-anhalt/digital-eval"

[project.scripts]
digital-eval = "digital_eval.cli:start"
ocr-util = "ocr_util.cli:start"
