[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ocr_util.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ocr_util = ["corpus/*.xml"]

[project]
name = "ocr-util"
dynamic = ["version"]
description = "OCR Utils"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Universitäts- und Landesbibliothek Sachsen-Anhalt",email = "development@bibliothek.uni-halle.de"}]
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License"
]
dependencies = [
	"rapidfuzz>3",
    "nltk",
    "requests",
    "docker",
    "numpy",
    "shapely",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
]
test = [
    "pytest-cov",
    "pytest-xdist",
]

[project.urls]
Homepage = "https://github.com/ulb-sachsen-anhalt/ocr-util"

[project.scripts]
ocr = "ocr_util.cli:start"

[tool.coverage.run]
source = ["exporter"]
branch = false
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/build/*"]

[tool.coverage.report]
precision = 2

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
