[metadata]
name = digital-eval
version = file:src/digital_eval/VERSION
description = Evaluate Mass Digitalization Data
author = Uwe Hartwig
author_email = development@bibliothek.uni-halle.de
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls = 
    Homepage = https://github.com/ulb-sachsen-anhalt/digital-eval

[options]
python_requires = >=3.8
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    rapidfuzz
    numpy
    nltk
    shapely

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    digital-eval = digital_eval.cli:start
