[metadata]
name = digital-eval
version = file:src/digital_eval/VERSION
description = Evaluate Mass Digitalization Data
long_description = file:README.md
long_description_content_type = text/markdown
author = Universitäts- und Landesbibliothek Sachsen-Anhalt
author_email = development@bibliothek.uni-halle.de
maintainer = Uwe Hartwig
maintainer_email = uwe.hartwig@bibliothek.uni-halle.de
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls = 
    Homepage = https://github.com/ulb-sachsen-anhalt/digital-eval

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    rapidfuzz
    numpy
    nltk
    shapely

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    digital-eval = digital_eval.cli:start
    ocr-util = digital_eval.ocr_util:start
